--- a/style.css
+++ b/style.css
@@ -171,6 +171,7 @@ h2 {
 
 .hero-container {
     padding: 9.25rem 3.938rem 16.625rem 1.5rem;
+    position: relative;
 }
 
 .hero-tagline {
@@ -200,6 +201,28 @@ h2 {
 .qualities-container {
     margin-top: 1rem;
     gap: 2.5rem;
+}
+
+.circle-1,
+.circle-2 {
+    position: absolute;
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+}
+
+.circle-1 {
+    background: var(--accent-color);
+    filter: blur(300px);
+    top: 3.375rem;
+    left: -0.563rem;
+}
+
+.circle-2 {
+    background: var(--primary-color);
+    filter: blur(300px);
+    right: 0.625rem;
+    bottom: 6.563rem;
 }
 
 /* Qualities */
@@ -288,4 +311,28 @@ h2 {
     font-weight: 500;
     font-size: 0.75rem;
     line-height: 0.938rem;
+}
+
+/* More Qualities */
+
+.more-qualities .container {
+    padding-top: 3rem;
+    padding-bottom: 2.5rem;
+    place-items: center;
+    text-align: center;
+}
+
+.more-qualities .container h2 {
+    margin-top: 2rem;
+    font-weight: 600;
+    font-size: 1.5rem;
+    line-height: 1.813rem;
+}
+
+.more-qualities .container p {
+    margin-top: 1rem;
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1.063rem;
+    margin-bottom: 2.5rem;
 }
