--- a/dashboard.css
+++ b/dashboard.css
@@ -113,7 +113,7 @@ header {
 
 .stakeRow {
     display: grid;
-    grid-template-columns: 1.6fr 3fr 1fr 1.4fr;
+    grid-template-columns: 1.6fr 3fr 1fr 1.4fr 1.5fr;
     padding: 0 30px 0 30px;
     align-items: center;
 }
@@ -189,6 +189,16 @@ header {
     color: var(--light-green);
 }
 
+.col5 button {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 10px 30px;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 19px;
+}
+
 .large_screen {
     display: none;
 }
@@ -222,15 +232,25 @@ header {
 }
 
 .roow {
-    padding: 10px 20px;
+    padding: 10px 10px;
     border-bottom: 1px solid var(--light-text-color);
 }
 
 .roow .bottom {
     margin-top: 15px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 0.8fr;
     align-items: center;
+}
+
+.bottom-right button {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 10px 10px;
+    border-radius: 10px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 19px;
 }
 
 .bottom .head {
@@ -254,11 +274,81 @@ header {
     color: var(--light-green);
 }
 
-.headTitle{
+.headTitle {
     padding: 8px 20px;
     border-bottom: 1px solid var(--light-text-color);
     display: grid;
     grid-template-columns: 1fr 1fr;
+}
+
+.withdraw-modal-con {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.1);
+    z-index: 5;
+    padding: 20px;
+}
+
+.withdraw-modal {
+    background-color: white;
+    padding: 20px;
+    width: 405px;
+    max-width: 500px;
+    border-radius: 8px;
+}
+
+.withdraw-modal div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-heading {
+    color: var(--primary-color);
+}
+
+.amount-with {
+    border: 2px solid var(--light-text-color);
+    padding: 10px;
+    flex: 1;
+    border-radius: 10px;
+}
+
+.withdraw-modal form{
+    margin-top: 20px;
+}
+
+.mid-text {
+    margin-top: 5px;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.err-btn,
+.suc-btn {
+    color: white;
+    width: 100%;
+    padding: 10px 0px;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    margin: 10px 0;
+}
+
+.err-btn {
+    background-color: var(--dark-danger);
+}
+
+.suc-btn {
+    margin-top: 20px;
+    background-color: var(--light-green);
 }
 
 @media only screen and (min-width: 670px) {
@@ -295,12 +385,17 @@ header {
         overflow: hidden;
     }
 
-    .large_screen{
+    .large_screen {
         display: block;
     }
 
-    .small_screen{
+    .small_screen {
         display: none;
+    }
+    
+    .withdraw-modal{
+        max-width: 600px;
+        padding: 35px;
     }
 }
 
