--- a/deposit.css
+++ b/deposit.css
@@ -169,7 +169,7 @@ header {
 }
 
 .alert {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: 0;
@@ -177,6 +177,7 @@ header {
     background-color: rgba(0, 0, 0, 0.1);
     justify-content: center;
     align-items: center;
+    z-index: 10;
 }
 
 .alert .alert-con {
@@ -230,7 +231,16 @@ header {
     text-align: center;
 }
 
+.barcode-con{
+    margin: 20px auto 0 auto;
+    width: 150px;
+    height: 150px;
+}
 
+.barcode-con img{
+    width: 100%;
+    height: 100%;
+}
 
 @media only screen and (min-width: 670px) {
 
