--- a/header.css
+++ b/header.css
@@ -46,6 +46,10 @@ a {
 
 #header {
     padding-top: 1.5rem;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 2;
 }
 
 .navbar {
