--- a/header.css
+++ b/header.css
@@ -8,6 +8,10 @@
     box-sizing: border-box;
 }
 
+p, h1, h2, h3, h4, h5, h6{
+    margin: 0;
+}
+
 body {
     font-family: var(--font);
     color: var(--text-color);
